    s390,s390x)
  * [armel] Disable iop32x and ixp4xx flavours (fixes FTBFS)
  * Clean up maintainer scripts and templating system
    - Move all templates under debian/templates
    - linux-image: Remove undocumented $KERNEL_ARCH variable from hook
      environment
    - Use only one template syntax (@keyword@) and do all substitutions
      in gencontrol.py

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 11 Aug 2013 19:34:47 +0200

linux (3.11~rc4-1~exp1) experimental; urgency=low

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update to aufs3.x-rcN-20130805

  [ Hector Oron ]
  * [armhf/armmp] Enable NET_CALXEDA_XGMAC as module (Closes: #717269) 

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 08 Aug 2013 13:09:47 +0200

linux (3.10.5-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.10.4
    - ipv6,mcast: always hold idev->lock before mca_lock
    - ipv6: call udp_push_pending_frames when uncorking a socket with AF_INET
      pending data (CVE-2013-4162)
    - ipv6: ip6_append_data_mtu did not care about pmtudisc and frag_size
      (CVE-2013-4163)
    - sunvnet: vnet_port_remove must call unregister_netdev
    - ipv6: only static routes qualify for equal cost multipathing
      (CVE-2013-4125)
    - atl1e: fix dma mapping warnings
    - atl1e: unmap partially mapped skb on dma error and free skb
    - vlan: mask vlan prio bits
    - vlan: fix a race in egress prio management
    - fuse: readdirplus: fix dentry leak
    - fuse: readdirplus: fix instantiate
    - fuse: readdirplus: sanity checks
    - bcache: Fix a dumb race
    - bcache: Advertise that flushes are supported
    - bcache: Shutdown fix (possibly fixes #715019)
    - bcache: Fix a sysfs splat on shutdown
    - bcache: Journal replay fix
    - ext4: fix error handling in ext4_ext_truncate()
    - media: saa7134: Fix unlocked snd_pcm_stop() call
    - media: dmxdev: remove dvb_ringbuffer_flush() on writer side